# pyemmo

./: .gitignore  .mailmap  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements-doc.txt  requirements-full.txt  requirements-test.txt  requirements-tests.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: publish-to-pypi.yaml  run-pytest.yaml
doc/: conf.py  convert_tutorials.py  index.rst  make.bat  uml_diagrams.py
doc/_static/css/: custom.css
doc/_static/js/: theme.js
doc/_templates/: layout.html
doc/images/uml/: classes_PyEMMO.api.dot  classes_PyEMMO.functions.dot  classes_PyEMMO.script.dot  classes_PyEMMO.script.geometry.dot  classes_PyEMMO.script.gmsh.dot  classes_PyEMMO.script.material.dot  classes_PyEMMO.script.physicals.dot  packages_PyEMMO.api.dot  packages_PyEMMO.functions.dot  packages_PyEMMO.script.dot  packages_PyEMMO.script.geometry.dot  packages_PyEMMO.script.gmsh.dot  packages_PyEMMO.script.material.dot  packages_PyEMMO.script.physicals.dot
doc/source/: force.md  modules.rst  pydraft.api.rst  pydraft.functions.rst  pydraft.rst  pydraft.script.geometry.rst  pydraft.script.material.rst  pydraft.script.rst  pyemmo.api.json.rst  pyemmo.api.pyleecan.rst  pyemmo.api.rst  pyemmo.functions.rst  pyemmo.onelab_parameters.rst  pyemmo.rst  pyemmo.script.geometry.rst  pyemmo.script.gmsh.rst  pyemmo.script.material.rst  pyemmo.script.rst  usage.rst  wiki.dq.rst  wiki.force.rst  wiki.rst
doc/source/tutorials/: core_loss.rst  pyleecan_api.rst  voltage_source_simulation.rst
exe_gen/: create_exe.bat  pyemmo.spec
pyemmo/: __init__.py  __main__.py  colors.py  default_config_dict.py  definitions.py  dictionary.doc  version.py
pyemmo/api/: SurfaceJSON.py  __init__.py  boundaryJSON.py  importJSON.py  json.py  machine_segment_surface.py  modelJSON.py
pyemmo/api/json/: SurfaceJSON.py  __init__.py  __main__.py  boundaryJSON.py  check.ipynb  create_airgaps.py  get_coilspan.py  importJSON.py  json.py  modelJSON.py  new_process.py
pyemmo/api/pyleecan/: __init__.py  __main__.py  build_pyemmo_line_list.py  build_pyemmo_material.py  build_pyemmo_point.py  calc_wind_cont.py  calcs_even_rotor_cont.py  calcs_rotor_spmsm_cont.py  createGeoDict.py  createS1S2.py  create_LamSlot_segment.py  create_geo_dict.py  create_gmsh_lines.py  create_gmsh_point.py  create_gmsh_surf.py  create_param_dict.py  create_pyleecan_simulation.py  detectInnerOuterLimit.py  detect_inner_outer_limit.py  get_coords_for_point.py  get_magnetization_dict.py  get_rotor_stator_cont.py  get_rotor_stator_surfs.py  get_translated_machine.py  label2part_id.py  main.py  translateArc1.py  translateArc2.py  translateArc3.py  (+3 more)
pyemmo/functions/: __init__.py  calcIronLoss.py  cleanName.py  clean_name.py  core_loss.py  exportMaxwell.py  importResults.py  import_maxwell.py  import_results.py  init_environment.py  maxwell.py  onelab_parameters.py  onelab_paramters.py  phase.py  plot.py  punkteAusStructExtrahieren.py  runOnelab.py  run_onelab.py  transform_coords.py  xml2pyDraft.py
pyemmo/script/: Circuit.pro  Circuit_SC_ASM.pro  __init__.py  default_color_dict.json  domain.py  machine.py  machine_magstadyn_a.pro  machine_template.pro  parameters_template.geo  rotor.py  script.py  stator.py
tests/: __init__.py  check_model_files.py  conftest.py  install_onelab.ps1  install_onelab.sh  pytest_script.py  test_script.py
tests/api/: __init__.py  test_machine_seg_surface.py
tests/data/: 00_prius_machine.json  01_spmsm_muster_01.json  02_spmsm_muster_02.json  03_synrm_muster_Bachelor.json  03_synrm_muster_Bachelor_zaw.json  03_synrm_muster_Bachelor_zww.json  AxialeLaenge_test.pos  MACHINE_TEST.geo
tests/functions/: test_ImportResults.py  test_cleanName.py  test_clean_name.py  test_create_cmd_command.py  test_import_results.py  test_runOnelab.py
tests/integrationTest/: __init__.py  apiTest.py  pyleecan_test_base.py  script_test_integration.py  script_tst_integration.py  testUtils.py  test_api.py  test_api_integration.py  test_pytest.py  test_tutorial.py
tests/pyleecan_api/: test_build_pyemmo_line_list.py  test_build_pyemmo_material.py  test_build_pyemmo_point.py  test_get_translated_machine.py  test_rotor_stator_cont.py
tests/script/: test_gmsh.py  test_script.py
tutorials/: convert_ipynb_tutorials.sh  core_loss.ipynb  pyleecan_api.ipynb  pyleecan_api.py  voltage_source_simulation.ipynb  voltage_source_simulation.py
workingDirectory/: __init__.py  add_copyright.bat  bandit_script.py  buildPyemmoLineList.py  buildPyemmoMaterial.py  buildPyemmoMovingBand.py  buildPyemmoPoint.py  build_pyemmo_line_list.py  build_pyemmo_material.py  build_pyemmo_point.py  calcIPMSMContour.py  calcIronLossOnelabVsAnsys.py  calcWindContour.py  calc_wind_cont.py  calcsSPMSMContour.py  calcs_even_rotor_cont.py  calcs_rotor_spmsm_cont.py  calculateCOG.py  compareIronLossAnsys.py  compare_core_loss_methods.py  createGeoDict.py  createParamDict.py  createS1S2.py  csvImport_FreeCAD.py  detectInnerOuterLimit.py  dev_pyleecan_holes.py  dev_stator_circuit_IM.py  dev_test_stator_circuit.py  example_Wike_SPMSM.py  flowcharts.py  function_SiemensCSVImport.py  generateRequirementsFile.py  getCoordinatesForPoint.py  getMagnetizationDict.py  getRotorStatorContour.py  getRotorStatorSurfaces.py  get_coords_for_point.py  get_magnetization_dict.py  get_rotor_stator_cont.py  get_rotor_stator_surfs.py  (+82 more)
workingDirectory/Vu/: bandit_script.py  mat_refs.py  pyleecan_test_base.py  pytest_script.py  testSPMSM.py  testSPMSM_base.py  testUtils.py  test_pytest.py
workingDirectory/freecad/: exportCSV_inMM_FromSketch.FCMacro  lineTable.csv  pmsm01.FCStd  pmsm02.FCStd  pmsm03.FCStd  pmsm04.FCStd  startPyDraft.FCMacro
workingDirectory/hooks/: install_hooks.bat  install_hooks.sh  pre-commit  pre-push
workingDirectory/step/: __init__.py  reluktanz_Luis_FromStep.py  stepToArea.py  stepToEMMO.py
workingDirectory/test_asm/: create_model.py  dev_dyn_resistance.py  evaluate_results.py  runSim.py  runSim_BlockedRotor.py  runSim_BlockedRotor_50Hz_50A_128Steps_80Perioden.py
(+618 files in other folders)
