[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyemmo"
authors = [
    { name = "AG-EM TTZ-EMO" },
    { name = "Max Schuler", email = "agem.ttz-emo@thws.de" },
    { name = "Sasithon Koenig" },
]
maintainers = [{ name = "Max Schuler", email = "agem.ttz-emo@thws.de" }]
readme = "README.md"
description = "PyEMMO is a interface for modeling electrical machines in the open-source FEA software Onelab"
urls = { Repository = "https://gitlab.ttz-emo.thws.de/ag-em/pyemmo" }
requires-python = ">= 3.6"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
keywords = [
    "electrical machine",
    "simulation",
    "onelab",
    "getdp",
    "gmsh",
    "fea",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "swat_em>=0.6.3",
    "pygetdp>=1.0.0",
    "gmsh>=4.10.3,<4.14",
    "matplotlib>=3.3.4",
    "numpy>=1.23.1",
    "parse>=1.19.0",
    "splines>=0.3.2",
]

# get version from setup.py via pyemmo/version.py
dynamic = ["version"]

# Optional dependencies
[project.optional-dependencies]
PYLEECAN = ['pyleecan>=1.5.1; python_version<"3.10"']

[tool.setuptools]
include-package-data = true

# find packages in source directory
[tool.setuptools.packages.find]
where = ["."]
include = ["pyemmo*"]
# exclude = ["additional*"]`
namespaces = false

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
split_on_trailing_comma = true
add_imports = ["from __future__ import annotations"]

[tool.black]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests/functions", "tests/script"]
log_cli = true
log_cli_level = "WARNING"
# log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
# log_cli_date_format = "%Y-%m-%d %H:%M:%S"
addopts = "--cov=pyemmo --cov=tests"

[tool.bandit]
skips = ["B311", "B404", "B603"]
# B311: using random standard libary to create plot colors -> could be resolved
# by predefining colors or just using balck or blue... TODO
# B404: We need subprocess to start simulations
# B603: subprocess mit "shell = False" - Dies minimiert das Risiko von
# Shell-Injection-Angriffen und sollte bevorzugt verwendet werden (gegenüber
# "shell = True").

## tox config
# Using legacy_tox_ini for now since there is no pure TOML parser in tox for
# now. See https://tox.wiki/en/3.24.5/config.html#configuration-discovery for
# details.

# [tool.tox]
# envlist = ["py37", "py38", "py39", "py310"]
# [tool.tox.envlist]
# envs = [
#     "py38",
#     "py39",
#     "py310",
# ] # "py311" not compatible with pyleecan yet
# [tool.tox.testenv]
# deps = ["pytest", "pytest_check", "hypothesis"]
# commands = ["pytest tests"]
# setenv = ["PATH = {env:PATH}{:}/."]
[tool.tox]
# py3.6 : Fails to get interpreter info when invoked from python3.12 due to
#           virtualenv.discovery using __future__.annotations which is not
#           available for python 3.6...
# py3.7 : Pyleecan (>=1.5.1) does not work for 3.7 due to dependency conflicts
#           with pyvista and SciDataTool. Pyvista max. version on 3.7 is 0.38.6
#           SciDataTool (2.5.0) only works with Python >=3.8.
#         Further latest numpy version for python 3.7 is 1.21.6!
# py3.10: Not working with PYLEECAN yet. Fails to install matplotlib 3.3.4 with
#           build and setup.cfg due to freetype missing MS C++ compilers
# py3.11: Not working with PYLEECAN yet. Not ompatcible with pyleecan yet due
#           to PyQt5 (needed by pyleecan, but not available in Python 3.11).
legacy_tox_ini = """
[tox]
envlist = py38, py39, py310, py311, py312
skip_missing_interpreters = False

[testenv]
deps =
    pytest
    pytest_check
    hypothesis
commands =
    # python -m build -o .tox/dist
    # pip install .tox/dist/*.whl
    pytest
setenv =
    PATH = {env:PATH}{:}/.
    VIRTUALENV_DISCOVERY=pyenv

[testenv:py38]
skip_install = true
base_python = python3.8

deps =
    pytest
    pytest_check
    hypothesis

commands =
    pytest

setenv =
    PATH = {env:PATH}{:}/.
    VIRTUALENV_DISCOVERY=pyenv
"""
