[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyemmo"
authors = [
    { name = "AG-EM TTZ-EMO" },
    { name = "Max Schuler", email = "agem.ttz-emo@thws.de" },
    { name = "Sasithon Koenig" },
]
maintainers = [{ name = "Max Schuler", email = "agem.ttz-emo@thws.de" }]
readme = "README.md"
description = "PyEMMO is a interface for modeling electrical machines in the open-source FEA software Onelab"
urls = { Repository = "https://gitlab.ttz-emo.thws.de/ag-em/pyemmo" }
requires-python = ">= 3.8"
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*", "AUTHORS.md"]
keywords = [
    "electrical machine",
    "simulation",
    "onelab",
    "getdp",
    "gmsh",
    "fea",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "swat_em>=0.6.3",
    "pygetdp>=1.0.0",
    "gmsh>=4.10.3,<4.14",
    "matplotlib>=3.3.4",
    "numpy>=1.23.1",
    "parse>=1.19.0",
    "splines>=0.3.2",
]

# get version from setup.py via pyemmo/version.py
dynamic = ["version"]

# Optional dependencies
[project.optional-dependencies]
PYLEECAN = ['pyleecan>=1.5.1; python_version<"3.10"']

[tool.setuptools]
include-package-data = true

# find packages in source directory
[tool.setuptools.packages.find]
where = ["."]
include = ["pyemmo*"]
# exclude = ["additional*"]`
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"
# log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
# log_cli_date_format = "%Y-%m-%d %H:%M:%S"
# addopts = "--cov=pyemmo --cov=tests"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
split_on_trailing_comma = true
add_imports = ["from __future__ import annotations"]

[tool.black]
line-length = 88

[tool.pylint.'MESSAGES CONTROL']
# Disable specific checks by their symbolic name or PEP 8 code.
disable = [
    "line-too-long", # Missing module docstring
    # "C0115",  # Missing class docstring
    # "C0116",  # Missing function or method docstring
    # "R0903",  # Too few public methods
]

[tool.bandit]
skips = ["B311", "B404", "B603"]
# B311: using random standard libary to create plot colors -> could be resolved
# by predefining colors or just using balck or blue... TODO
# B404: We need subprocess to start simulations
# B603: subprocess mit "shell = False" - Dies minimiert das Risiko von
# Shell-Injection-Angriffen und sollte bevorzugt verwendet werden (gegenüber
# "shell = True").
